understanding of mongoDB

--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,10 @@
   <button id="submit" value="Submit">Submit</button>
 </form>
 <p id="results"></p>
+
+<p>
+  <a href="/query.html">Go to Query Page</a>
+</p>
+
 </body>
 </html>
