--- a/public/query.html
+++ b/public/query.html
@@ -20,5 +20,10 @@
   <button id="submit_q" value="Submit">Submit</button>
 </form>
 <p id="results"></p>
+
+<p>
+  <a href="/index.html">Go to Insert Page</a>
+</p>
+
 </body>
 </html>
